# weather-hub-2

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI_lint.yml  CI_pytest.yml  versions.yml
app/: __init__.py
app/modules/auth/: __init__.py  models.py  repositories.py  routes.py  services.py
app/modules/auth/templates/auth/: sessions.html
app/modules/auth/tests/: test_signup_email.py
app/modules/dataset/: models.py  routes.py  seeders.py  services.py
app/modules/fakenodo/: __init__.py  forms.py  models.py  repositories.py  routes.py  seeders.py  services.py
app/modules/fakenodo/assets/: scripts.js
app/modules/fakenodo/templates/fakenodo/: index.html
app/modules/fakenodo/tests/: locustfile.py  test_selenium.py
app/modules/notifications/: __init__.py  service.py
app/modules/notifications/tests/: test_service.py
app/modules/profile/templates/profile/: summary.html
app/modules/zenodo/: routes.py  services.py
app/static/css/: own.css
app/templates/: base_template.html
core/blueprints/: base_blueprint.py
core/managers/: config_manager.py
